[gd_scene load_steps=7 format=2]

[ext_resource path="res://MainMenu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]

[sub_resource type="PlaneMesh" id=1]
size = Vector2( 200, 200 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0, 0.956863, 1, 1 )

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.180392, 0.74902, 0.431373, 1 )

[sub_resource type="CubeMesh" id=4]

[node name="MainMenu" type="Node"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ConnectionPanel" type="PanelContainer" parent="CanvasLayer"]
anchor_left = 0.40332
anchor_top = 0.358333
anchor_right = 0.601563
anchor_bottom = 0.508333
margin_top = 1.52588e-05
__meta__ = {
"_edit_use_anchors_": true
}

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/ConnectionPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 196.001
margin_bottom = 83.0
columns = 2

[node name="IpLabel" type="Label" parent="CanvasLayer/ConnectionPanel/GridContainer"]
margin_top = 5.0
margin_right = 92.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Ip Address:"

[node name="IPLineEdit" type="LineEdit" parent="CanvasLayer/ConnectionPanel/GridContainer"]
margin_left = 96.0
margin_right = 188.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "127.0.0.1"

[node name="PortLabel" type="Label" parent="CanvasLayer/ConnectionPanel/GridContainer"]
margin_top = 33.0
margin_right = 92.0
margin_bottom = 47.0
size_flags_horizontal = 3
text = "Port:"

[node name="PortLineEdit" type="LineEdit" parent="CanvasLayer/ConnectionPanel/GridContainer"]
margin_left = 96.0
margin_top = 28.0
margin_right = 188.0
margin_bottom = 52.0
size_flags_horizontal = 3
text = "55555"

[node name="ServerButton" type="Button" parent="CanvasLayer/ConnectionPanel/GridContainer"]
margin_top = 56.0
margin_right = 92.0
margin_bottom = 76.0
size_flags_horizontal = 3
text = "Server"

[node name="ClientButton" type="Button" parent="CanvasLayer/ConnectionPanel/GridContainer"]
margin_left = 96.0
margin_top = 56.0
margin_right = 188.0
margin_bottom = 76.0
size_flags_horizontal = 3
text = "Client"

[node name="MessageLabel" type="Label" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 0.0233333
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ResetButton" type="Button" parent="CanvasLayer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -48.0
margin_top = -20.0
text = "RESET"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LostSyncLabel" type="Label" parent="CanvasLayer"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -106.0
margin_bottom = 14.0
text = "Regaining sync..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spatial" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.676979, 4.79958, 35.8032 )
fov = 22.0
size = 10.0

[node name="ServerPlayer" parent="Spatial" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 1.5, 0 )
speed = 8192
inital_position = PoolStringArray( "-6", "1.5" )
forward = 1

[node name="ClientPlayer" parent="Spatial" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 1.5, 0 )
speed = 8192
inital_position = PoolStringArray( "6", "1.5" )

[node name="FrontWall" type="MeshInstance" parent="Spatial"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 100, -41.8577 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="Floor" type="MeshInstance" parent="Spatial"]
mesh = SubResource( 1 )
material/0 = SubResource( 3 )

[node name="Decorations" type="Spatial" parent="Spatial"]

[node name="Bench_1" type="MeshInstance" parent="Spatial/Decorations"]
transform = Transform( 10, 0, 0, 0, 1, 0, 0, 0, 1, 15.7, 1, -9.5 )
mesh = SubResource( 4 )
skeleton = NodePath("")
material/0 = null

[node name="Bench_2" type="MeshInstance" parent="Spatial/Decorations"]
transform = Transform( 10, 0, 0, 0, 1, 0, 0, 0, 1, -15.7, 1, -9.5 )
mesh = SubResource( 4 )
skeleton = NodePath("")
material/0 = null

[connection signal="pressed" from="CanvasLayer/ConnectionPanel/GridContainer/ServerButton" to="." method="_on_ServerButton_pressed"]
[connection signal="pressed" from="CanvasLayer/ConnectionPanel/GridContainer/ClientButton" to="." method="_on_ClientButton_pressed"]
[connection signal="pressed" from="CanvasLayer/ResetButton" to="." method="_on_ResetButton_pressed"]
